--- a/index.html
+++ b/index.html
@@ -113,17 +113,35 @@
 
 
 <!-- Teaser video-->
+<!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
+    <div class="hero-body has-text-centered">
+      
+      <!-- 视频标题 -->
+      <h2 class="title is-3">PEM Electrolyzer Disassembly</h2>
+
+      <!-- 视频 -->
+      <video id="tree" autoplay controls muted loop style="width:100%; height:auto;" poster="">
+        <source src="static/videos/PEM电解槽拆卸.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
+    </div>
+  </div>
+</section>
+<!-- PEM Electrolyzer Assembly video -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body has-text-centered">
+      <!-- 视频标题 -->
+      <h2 class="title is-3">PEM Electrolyzer Assembly（PEM电解槽组装）</h2>
+      <!-- 视频 -->
+      <video id="pem-assembly" autoplay controls muted loop playsinline
+             style="width:100%; height:auto;" poster="">
+        <!-- 按你的实际文件名与路径修改 -->
+        <source src="static/videos/PEM电解槽组装.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
   </div>
 </section>
@@ -154,31 +172,37 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/全景.jpeg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           First image description.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/全景2.jpeg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Second image description.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/半全景.jpeg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
          Third image description.
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/电解槽.jpeg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/电解槽2.jpeg" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Fifth image description.
+        </h2>
     </div>
   </div>
 </div>
