--- a/index.html
+++ b/index.html
@@ -148,49 +148,50 @@
   </div>
 </section>
 <!-- End side-by-side videos -->
-
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/全景.jpeg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+
+        <div class="item">
+          <div class="img-frame">
+            <img src="static/images/全景.jpeg" alt="Panorama 1" loading="lazy"/>
+          </div>
+          <h2 class="subtitle has-text-centered">First image description.</h2>
+        </div>
+
+        <div class="item">
+          <div class="img-frame">
+            <img src="static/images/全景2.jpeg" alt="Panorama 2" loading="lazy"/>
+          </div>
+          <h2 class="subtitle has-text-centered">Second image description.</h2>
+        </div>
+
+        <div class="item">
+          <div class="img-frame">
+            <img src="static/images/半全景.jpeg" alt="Half Panorama" loading="lazy"/>
+          </div>
+          <h2 class="subtitle has-text-centered">Third image description.</h2>
+        </div>
+
+        <div class="item">
+          <div class="img-frame">
+            <img src="static/images/电解槽.jpeg" alt="Electrolyzer" loading="lazy"/>
+          </div>
+          <h2 class="subtitle has-text-centered">Fourth image description.</h2>
+        </div>
+
+        <div class="item">
+          <div class="img-frame">
+            <img src="static/images/电解槽2.jpeg" alt="Electrolyzer 2" loading="lazy"/>
+          </div>
+          <h2 class="subtitle has-text-centered">Fifth image description.</h2>
+        </div>
+
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/全景2.jpeg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/半全景.jpeg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/电解槽.jpeg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/电解槽2.jpeg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Fifth image description.
-        </h2>
     </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
