--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- 左侧：拆卸 -->
       <div class="column is-12-mobile is-6-tablet is-6-desktop">
         <div class="has-text-centered">
-          <h2 class="title is-4">PEM Electrolyzer Disassembly</h2>
+          <h2 class="title is-4">PEM Electrolyzer Disassembly — Brand A</h2>
           <video id="pem-disassembly"
                  autoplay controls muted loop playsinline preload="metadata"
                  style="width:100%; height:auto;" poster="">
@@ -134,7 +134,7 @@
       <!-- 右侧：组装 -->
       <div class="column is-12-mobile is-6-tablet is-6-desktop">
         <div class="has-text-centered">
-          <h2 class="title is-4">PEM Electrolyzer Assembly</h2>
+          <h2 class="title is-4">PEM Electrolyzer Assembly— Brand A</h2>
           <video id="pem-assembly"
                  autoplay controls muted loop playsinline preload="metadata"
                  style="width:100%; height:auto;" poster="">
@@ -144,6 +144,28 @@
         </div>
       </div>
 
+    </div>
+  </div>
+</section>
+<!-- Teaser video (Brand B) -->
+<section class="section pt-0">
+  <div class="container is-max-desktop">
+    <div class="columns is-variable is-6 is-multiline">
+      <div class="column is-12">
+        <div class="has-text-centered">
+          <h2 class="title is-4">PEM Electrolyzer Disassembly — Brand B</h2>
+          <video id="pem-disassembly-brandb"
+                 autoplay controls muted loop playsinline preload="metadata"
+                 style="width:100%; height:auto;" poster="static/images/pem_brandb_poster.jpg">
+            <!-- MP4 主流兼容 -->
+            <source src="static/videos/PEM电解槽拆装2.mp4" type="video/mp4">
+
+            Your browser does not support the video tag.
+          </video>
+          <!-- （可选）补充一句简短说明 -->
+          <!-- <p class="has-text-grey is-size-6 mt-2">Brand B disassembly demo (single-stack module).</p> -->
+        </div>
+      </div>
     </div>
   </div>
 </section>
